--- a/.github/workflows/practice1.yaml
+++ b/.github/workflows/practice1.yaml
@@ -1,6 +1,6 @@
-name: My First Workflow
-on: [push]  # Trigger on every push
+name: Practice1
 
+on: [push]
 jobs:
   job1:
     name: Say Hello
@@ -40,8 +40,9 @@ jobs:
   job3:
     name: Summary Report
     runs-on: ubuntu-latest
-    needs: [job1, job2]
-
+    needs:
+      - hello-job
+      - system-job
     steps:
       - name: Wait message
         run: echo "Both previous jobs completed successfully!"
