--- a/.github/workflows/1-basics.yaml
+++ b/.github/workflows/1-basics.yaml
@@ -1,5 +1,5 @@
 name: GitHub Actions Basics
-on: [push, workflow_dispatch]  # Triggers: push or manual
+on: [push, workflow_dispatch]  
 
 jobs:
   hello-job:
