--- a/.github/workflows/2-workflow-events.yml
+++ b/.github/workflows/2-workflow-events.yml
@@ -1,3 +1,13 @@
+name: Event Name Detector
+
 on:
+  workflow_dispatch:
+  push:
+  pull_request:
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Display Trigger Name
+        run: echo "I've been triggered by ${{ github.event_name }} event"
