--- a/.github/workflows/3-event-filters.yml
+++ b/.github/workflows/3-event-filters.yml
@@ -1,4 +1,16 @@
 name: Event Filters
 on:
+  push:
+    branches:
+      - dev
+      - 'release/*'
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
+  test-filters:
+    name: Test Filters
+    runs-on: ubuntu-latest
+    steps:
+      - name: Confirm filters worked
+        runs: echo "Event filters working! Triggered on ${{ github.ref_name }} branch"
