update url database

--- a/.github/workflows/4-expressions-and-context.yml
+++ b/.github/workflows/4-expressions-and-context.yml
@@ -41,12 +41,13 @@ jobs:
 
       - name: Secrets Context Test
         env:
-          TEST_API_KEY: ${{ secrets.TEST_API_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          TEST_API_KEY: "key"
+          DATABASE_URL: "db url"
         run: |
           echo "=== Secrets Availability Check ==="
           echo "Has TEST_API_KEY secret: ${{ secrets.TEST_API_KEY != '' }}"
           echo "Has DATABASE_URL secret: ${{ secrets.DATABASE_URL != '' }}"
+          echo "TEST_API_KEY env: ${{ env.TEST_API_KEY }}"
+          echo "DATABASE_URL env: ${{ env.DATABASE_URL }}"
           echo "API key configured: ${{ secrets.TEST_API_KEY != '' && 'YES' || 'NO' }}"
           echo "Database URL starts with 'postgresql': ${{ startsWith(secrets.DATABASE_URL, 'postgresql') }}"
-
