--- a/.github/workflows/4-expressions-and-context.yml
+++ b/.github/workflows/4-expressions-and-context.yml
@@ -50,3 +50,52 @@ jobs:
           echo "DATABASE_URL env: ${{ env.DATABASE_URL }}"
           echo "API key configured: ${{ secrets.TEST_API_KEY != '' && 'YES' || 'NO' }}"
           echo "Database URL starts with 'postgresql': ${{ startsWith(secrets.DATABASE_URL, 'postgresql') }}"
+
+  logic-operations:
+    needs: context-explorer
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Main Branch
+        if: github.ref_name == 'main'
+        run: echo "This is the main branch - Production mode"
+
+      - name: Check Feature Branch
+        if: startsWith(github.ref_name, 'feature/')
+        run: echo "This is a feature branch - Development mode"
+
+      - name: Default Branch Condition
+        run: echo "This is another type of branch - Testing mode"
+
+      - name: Run on Linux
+        if: runner.os == 'linux'
+        run: |
+          echo "🐧 Running on Linux - using apt package manager"
+          echo "Linux runner detected: ${{ runner.os }}"
+
+      - name: Run on macOS
+        if: runner.os == 'macOS'
+        run: |
+          echo "🍎 Running on macOS - using homebrew package manager"
+          echo "macOS runner detected: ${{ runner.os }}"
+
+      - name: Run on Windows
+        if: runner.os == 'Windows'
+        run: |
+          echo "🪟 Running on Windows - using chocolatey package manager"
+          echo "Windows runner detected: ${{ runner.os }}"
+
+      - name: String Manipulations
+        run: |
+          echo "=== String Transformations ==="
+          echo "Original ref: ${{ github.ref }}"
+          echo "Clean branch name: ${{ replace(github.ref, 'refs/heads/', '') }}"
+          echo "Uppercase branch: ${{ upper(github.ref_name) }}"
+          echo "Lowercase branch: ${{ lower(github.ref_name) }}"
+          echo "Branch contains 'main': ${{ contains(github.ref_name, 'main') }}"
+          echo "Branch starts with 'feature': ${{ startsWith(github.ref_name, 'feature/') }}"
+
+      - name: Conditional Logic Examples
+        run: |
+          echo "Environment type: ${{ github.ref_name == 'main' && 'production' || 'development' }}"
+          echo "Runner type: ${{ runner.os == 'Linux' && 'unix' || 'other' }}"
+          echo "Branch category: ${{ startsWith(github.ref_name, 'feature/') && 'feature' || 'stable' }}"
