--- a/.github/workflows/4-expressions-and-context.yml
+++ b/.github/workflows/4-expressions-and-context.yml
@@ -1,4 +1,5 @@
 name: Expressions & Context
+
 on:
   push:
   workflow_dispatch:
@@ -10,12 +11,14 @@ jobs:
       NODE_VERSION: '18'
       BUILD_ENV: 'development'
       APP_NAME: 'TestApp'
+      CLEAN_BRANCH: ${{ github.ref_name }}
     steps:
       - name: GitHub Context Information
         run: |
           echo "=== GitHub Context ==="
           echo "Repository: ${{ github.repository }}"
           echo "Branch: ${{ github.ref_name }}"
+          echo "Clean branch (from env): ${{ env.CLEAN_BRANCH }}"
           echo "Triggered by: ${{ github.actor }}"
           echo "Event type: ${{ github.event_name }}"
           echo "Run number: ${{ github.run_number }}"
@@ -36,6 +39,7 @@ jobs:
           echo "Node version from env: ${{ env.NODE_VERSION }}"
           echo "Build environment: ${{ env.BUILD_ENV }}"
           echo "Application name: ${{ env.APP_NAME }}"
+          echo "Clean branch name from env: ${{ env.CLEAN_BRANCH }}"
           echo "System PATH exists: ${{ env.PATH != '' }}"
           echo "Home directory: ${{ env.HOME }}"
 
@@ -53,50 +57,52 @@ jobs:
           echo "Database URL starts with 'postgresql': ${{ startsWith(secrets.DATABASE_URL, 'postgresql') }}"
 
   logic-operations:
-        needs: context-explorer
-        runs-on: ubuntu-latest
-        steps:
-          - name: Main Branch Detection
-            if: github.ref_name == 'main'
-            run: echo "This is the main branch - Production mode"
+    needs: context-explorer
+    runs-on: ubuntu-latest
+    env:
+      CLEAN_BRANCH: ${{ github.ref_name }}
+    steps:
+      - name: Main Branch Detection
+        if: github.ref_name == 'main'
+        run: echo "This is the main branch - Production mode"
 
-          - name: Feature Branch Detection
-            if: startsWith(github.ref_name, 'feature/')
-            run: echo "This is a feature branch - Development mode"
+      - name: Feature Branch Detection
+        if: startsWith(github.ref_name, 'feature/')
+        run: echo "This is a feature branch - Development mode"
 
-          - name: Other Branch Detection
-            if: github.ref_name != 'main' && !startsWith(github.ref_name, 'feature/')
-            run: echo "This is another type of branch - Testing mode"
+      - name: Other Branch Detection
+        if: github.ref_name != 'main' && !startsWith(github.ref_name, 'feature/')
+        run: echo "This is another type of branch - Testing mode"
 
-          - name: Linux Operations
-            if: runner.os == 'Linux'
-            run: |
-              echo "🐧 Running on Linux - using apt package manager"
-              echo "Linux runner detected: ${{ runner.os }}"
+      - name: Linux Operations
+        if: runner.os == 'Linux'
+        run: |
+          echo "🐧 Running on Linux - using apt package manager"
+          echo "Linux runner detected: ${{ runner.os }}"
 
-          - name: macOS Operations
-            if: runner.os == 'macOS'
-            run: |
-              echo "Running on macOS - using homebrew package manager"
-              echo "macOS runner detected: ${{ runner.os }}"
+      - name: macOS Operations
+        if: runner.os == 'macOS'
+        run: |
+          echo "Running on macOS - using homebrew package manager"
+          echo "macOS runner detected: ${{ runner.os }}"
 
-          - name: Windows Operations
-            if: runner.os == 'Windows'
-            run: |
-              echo "Running on Windows - using chocolatey package manager"
-              echo "Windows runner detected: ${{ runner.os }}"
+      - name: Windows Operations
+        if: runner.os == 'Windows'
+        run: |
+          echo "Running on Windows - using chocolatey package manager"
+          echo "Windows runner detected: ${{ runner.os }}"
 
-          - name: String Manipulation Functions
-            run: |
-              echo "=== String Transformations ==="
-              echo "Original ref: ${{ github.ref }}"
-              echo "Clean branch name: ${{ replace(github.ref, 'refs/heads/', '') }}"
-              echo "Uppercase branch: ${{ upper(github.ref_name) }}"
-              echo "Lowercase branch: ${{ lower(github.ref_name) }}"
-              echo "Branch contains 'main': ${{ contains(github.ref_name, 'main') }}"
-              echo "Branch starts with 'feature': ${{ startsWith(github.ref_name, 'feature/') }}"
-              
-              echo "=== Conditional Logic ==="
-              echo "Environment type: ${{ github.ref_name == 'main' && 'production' || 'development' }}"
-              echo "Runner type: ${{ runner.os == 'Linux' && 'unix' || 'other' }}"
-              echo "Branch category: ${{ startsWith(github.ref_name, 'feature/') && 'feature' || 'stable' }}"
+      - name: String Manipulation Functions
+        run: |
+          echo "=== String Transformations ==="
+          echo "Original ref: ${{ github.ref }}"
+          echo "Clean branch (from env): ${{ env.CLEAN_BRANCH }}"
+          echo "Uppercase branch: ${{ upper(env.CLEAN_BRANCH) }}"
+          echo "Lowercase branch: ${{ lower(env.CLEAN_BRANCH) }}"
+          echo "Branch contains 'main': ${{ contains(env.CLEAN_BRANCH, 'main') }}"
+          echo "Branch starts with 'feature': ${{ startsWith(env.CLEAN_BRANCH, 'feature/') }}"
+          
+          echo "=== Conditional Logic ==="
+          echo "Environment type: ${{ github.ref_name == 'main' && 'production' || 'development' }}"
+          echo "Runner type: ${{ runner.os == 'Linux' && 'unix' || 'other' }}"
+          echo "Branch category: ${{ startsWith(env.CLEAN_BRANCH, 'feature/') && 'feature' || 'stable' }}"
