--- a/.github/workflows/4-expressions-and-context.yml
+++ b/.github/workflows/4-expressions-and-context.yml
@@ -84,9 +84,7 @@ jobs:
         run: |
           echo "=== String Transformations ==="
           echo "Original ref: ${{ github.ref }}"
-          echo "Clean branch name: ${{ replace(github.ref, 'refs/heads/', '') }}"
-          echo "Uppercase branch: ${{ upper(github.ref_name) }}"
-          echo "Lowercase branch: ${{ lower(github.ref_name) }}"
+          echo "Clean branch name: ${github.ref#refs/heads/}"
           echo "Branch contains 'main': ${{ contains(github.ref_name, 'main') }}"
           echo "Branch starts with 'feature': ${{ startsWith(github.ref_name, 'feature/') }}"
 
